# mtg-collection-desktop

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: verify_resolver.py
src/mtg_collection/: db.py  importer.py  resolver.py  scryfall.py  scryfall_bulk.py
src/mtg_collection/ui/: main_window.py
src/mtg_collection_desktop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
